made supabase uploads a service|removed redundant getUserByEmail
